@@ -161,10 +161,17 @@ typedef enum {
     PSLR_EXPOSURE_SUBMODE_PET,
     PSLR_EXPOSURE_SUBMODE_CANDLELIGHT,
     PSLR_EXPOSURE_SUBMODE_MUSEUM,
+    PSLR_EXPOSURE_SUBMODE_19,
     PSLR_EXPOSURE_SUBMODE_FOOD,
     PSLR_EXPOSURE_SUBMODE_STAGE,
-    PSLR_EXPOSURE_SUBMODE_SWALLOWDOF,
     PSLR_EXPOSURE_SUBMODE_NIGHTSNAP,
+    PSLR_EXPOSURE_SUBMODE_SWALLOWDOF,
+    PSLR_EXPOSURE_SUBMODE_24,
+    PSLR_EXPOSURE_SUBMODE_NIGHTSCENEHDR,
+    PSLR_EXPOSURE_SUBMODE_BLUESKY,
+    PSLR_EXPOSURE_SUBMODE_FOREST,
+    PSLR_EXPOSURE_SUBMODE_28,
+    PSLR_EXPOSURE_SUBMODE_BLACKLIGHTSILHOUETTE,
     PSLR_EXPOSURE_SUBMODE_MAX
 } pslr_exposure_submode_t;
 
